<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAirlineLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFF"
            android:minHeight="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:rotation="-45"
            android:src="@drawable/ic_link"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cvPassenger"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:layout_constraintTop_toBottomOf="@id/ivAirlineLogo">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/search_bar"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/title">

                    <TableRow
                        android:layout_margin="4dp"
                        android:background="@drawable/bg_item">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/passenger_id" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvPassengerId"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_item"
                            android:layout_height="wrap_content"
                            android:padding="8dp" />
                    </TableRow>

                    <TableRow
                        android:layout_margin="4dp"
                        android:background="@drawable/bg_item">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/passenger_name" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvPassengerName"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:background="@drawable/bg_item"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvPassengerId" />
                    </TableRow>

                    <TableRow
                        android:layout_margin="4dp"
                        android:background="@drawable/bg_item">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/trips" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvPassengerTrip"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:background="@drawable/bg_item"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/tvPassengerName" />

                    </TableRow>

                </TableLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAirline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cvPassenger"
            tools:layout_editor_absoluteX="4dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/airline_details"
                    android:textStyle="bold"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAirlineName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="4dp"
                    android:text="@string/airline_name"
                    android:textStyle="bold"
                    android:layout_margin="4dp"
                    android:background="@drawable/bg_item"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/appCompatTextView2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvAirlineSlogan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:padding="4dp"
                    android:text="@string/airline_slogan"
                    android:background="@drawable/bg_item"
                    android:layout_margin="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAirlineName" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvAirlineSlogan">

                    <TableRow
                        android:layout_margin="4dp"
                        android:background="@drawable/bg_item">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/head_quater" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvAirlineHeadQuater"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_item"
                            android:layout_height="wrap_content"
                            android:padding="4dp" />
                    </TableRow>

                    <TableRow
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/bg_item">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/establish" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvAirlineEstablish"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_item"
                            android:layout_height="wrap_content"
                            android:padding="4dp" />

                    </TableRow>

                    <TableRow
                        android:layout_marginHorizontal="4dp"
                        android:layout_marginBottom="4dp"
                        android:background="@drawable/bg_item">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="4dp"
                            android:text="@string/country" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/tvAirlineCountry"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:background="@drawable/bg_item"
                            android:layout_height="wrap_content"
                            android:padding="4dp" />
                    </TableRow>
                </TableLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>